# santa-fe-school-finder

./: .env  LICENSE  README.md  load_initial_data.spec  main.spec  pyproject.toml
main/: load_initial_data.py  main.py
